# Azurlane_Checker

./: settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  checker.cpp  fake_io.cpp
app/src/main/java/com/example/checker/: HookEntry.java
app/src/main/java/com/example/fakeio/: HookEntry.java
